# boardroom-analyst

./: .gitignore  README.md  pyproject.toml  wrangler.jsonc
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
demo/: README.md  build_demo.py  render_recording.sh
demo/output/: boardroom_demo.duckdb  datamart_context.json
demo/output/analysis_runs/: q001_segment_mrr.json  q001_surface_revenue.json  q002_growth_waterfall.json  q002_revenue_growth_waterfall.json  q003_intent_efficiency.json  q004_engagement_conversion.json
demo/queries/: q001_segment_mrr.sql  q001_surface_revenue.sql  q002_growth_waterfall.sql  q002_revenue_growth_waterfall.sql  q003_intent_efficiency.sql  q004_engagement_conversion.sql
demo/showcase/: index.html
fixtures/pinterest_dbt/models/: schema.yml
fixtures/saas_dbt/models/: schema.yml
fixtures/visual_discovery_dbt/models/: schema.yml
marketing/: bill-ready-pitch-brief.md  demo-script.md  executive-pitch-brief.md  faq.md  manager-pitch.md  one-pager.md  pitch-deck.md
plugins/boardroom-analyst/: release.json
plugins/boardroom-analyst/.claude-plugin/: plugin.json
plugins/boardroom-analyst/.codex-plugin/: plugin.json
plugins/boardroom-analyst/agents/: openai.yaml
plugins/ceo-datamart-insights/: release.json
site/: 404.html  index.html
site/assets/: boardroom-analyst-internal-pitch.pptx
site/demo/: index.html
src/: worker.js
tests/: test_cli_smoke.py  test_dbt_context.py  test_duckdb_runner.py  test_plugin_contracts.py  test_report_builder.py  test_sql_safety.py
(+31 files in other folders)
