[project]
name = "boardroom-analyst"
version = "0.1.0"
description = "Agent skill pack helpers for governed executive analytics over dbt-documented DuckDB datamarts."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["plugins/boardroom-analyst/scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["plugins/boardroom-analyst/scripts"]
